objects/Part_Selector_Output_Price_Table__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AUTHORIZED_DISTRIBUTOR__c</fullName>
        <label>AUTHORIZED DISTRIBUTOR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELITE_DISTRIBUTOR__c</fullName>
        <label>ELITE DISTRIBUTOR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade__c</fullName>
        <label>Trade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Part Selector Output Price Table</label>
</CustomObject>